--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,9 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
+    "helmet": "^3.4.0",
     "jade": "~1.11.0",
+    "mongoose": "^4.8.1",
     "morgan": "~1.7.0",
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
