--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "express-jwt": "^5.1.0",
     "helmet": "^3.4.0",
     "jsonwebtoken": "^7.2.1",
+    "lodash": "^4.17.4",
     "mongoose": "^4.8.1",
     "morgan": "~1.7.0",
     "passport": "^0.3.2",
