--- a/server/package.json
+++ b/server/package.json
@@ -2,8 +2,14 @@
   "name": "server",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+    "node": "7.4.0"
+  },
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "node app.js"
+  },
+  "main": {
+    "app.js"
   },
   "dependencies": {
     "bcrypt": "^1.0.2",
