--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^1.0.2",
     "bluebird": "^3.4.7",
     "body-parser": "~1.15.2",
+    "cors": "^2.8.1",
     "debug": "~2.2.0",
     "express": "~4.14.0",
     "express-jwt": "^5.1.0",
