--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "angular2-jwt": "^0.1.28",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "normalize.css": "^5.0.0",
