--- a/client/package.json
+++ b/client/package.json
@@ -21,9 +21,11 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "@types/lodash": "^4.14.54",
     "angular2-jwt": "^0.1.28",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "lodash": "^4.17.4",
     "normalize.css": "^5.0.0",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
